--- a/iniciativas.html
+++ b/iniciativas.html
@@ -178,7 +178,7 @@
                         <div class="col-md-6">
                           <button
                             type="button"
-                            class="text-dark border border-dark bg-light me-4 btn fs-3 fw-bold ms-4 mt-4 text-white mb-4"
+                            class="text-dark rounded form-control border border-dark bg-light mt-4 me-4"
                             onclick="siguientePaso()"
                           >
                             CONTINUAR
@@ -207,7 +207,7 @@
                         ></label>
                         <input
                           type="text"
-                          class="rounded form-control border border-dark bg-light me-4"
+                          class="rounded form-control border border-dark bg-light me-5"
                           id="exampleFormControlInput1"
                           placeholder="Nombre"
                         />
@@ -280,13 +280,7 @@
                         <div class="col-md-6">
                           <button
                             type="button"
-                            class="rounded form-control border border-dark bg-light me-4"
-                            style="
-                              border-color: #1a4301;
-                              background-color: #1a4301;
-                            "
-                            ;
-                            ;
+                            class="mb-2 mt-2 text-dark rounded form-control border border-dark bg-light me-4"
                             onclick="siguientePaso()"
                           >
                             ANTERIOR
@@ -295,13 +289,7 @@
                         <div class="col-md-6">
                           <button
                             type="button"
-                            class="rounded form-control border border-dark bg-light me-4"
-                            style="
-                              border-color: #1a4301;
-                              background-color: #1a4301;
-                            "
-                            ;
-                            ;
+                            class="text-dark rounded form-control border border-dark bg-light me-4 mt-2"
                             onclick="siguientePaso()"
                           >
                             SIGUIENTE
@@ -409,10 +397,7 @@
                 <div class="col-md-6">
                   <button
                     type="button"
-                    class="rounded form-control border border-dark bg-light me-4"
-                    style="border-color: #1a4301; background-color: #1a4301"
-                    ;
-                    ;
+                    class="text-dark rounded form-control border border-dark bg-light me-4"
                     onclick="siguientePaso()"
                   >
                     ANTERIOR
@@ -421,7 +406,7 @@
                 <div class="col-md-6">
                   <button
                     type="button"
-                    class="rounded-pill btn fs-3 fw-bold ms-4 mt-4 text-white mb-4"
+                    class="text-dark rounded form-control border border-dark bg-light me-4"
                     onclick="siguientePaso()"
                   >
                     FINALIZAR
