--- a/index.html
+++ b/index.html
@@ -70,14 +70,14 @@
           <div class="col-md-12" style="position: relative">
             <img class="img-fluid" src="./imagenes/fondoinicio.jpg" />
             <div class="col-md-4" style="position: absolute; top: 10px">
-              <h1 class="text-white ms-4 mt-3">
+              <h1  class="text-white ms-4 mt-3 versionpequena">
                 Salvemos juntos la buena comida
               </h1>
-              <p class="text-white fs-3 ms-4">
+              <p class="text-white fs-3 ms-4 versionpequena">
                 El desperdicio de alimentos es un gran problema y nosotros
                 podemos ser una solución.
               </p>
-              <p class="text-white fs-3 ms-4">
+              <p class="text-white fs-3 ms-4 versionpequena">
                 Share Before Waste es la aplicación que te permite rescatar los
                 alimentos no vendidos en tus lugares favoritos.
               </p>
@@ -147,11 +147,11 @@
           <div class="col-md-12" style="position: relative">
             <img class="img-fluid mb-5" src="./imagenes/untercio.jpg" />
             <div class="col-md-4" style="position: absolute; top: 10px">
-              <h1 class="text-white ms-4">
+              <h1 class="text-white ms-4 versionpequena">
                 Un tercio de todos los alimentos que se producen en el mundo se
                 desperdician
               </h1>
-              <p class="text-white left fs-3 ms-4">
+              <p class="text-white left fs-3 ms-4 versionpequena">
                 Esto representa 1300 millones de toneladas de alimentos, de los
                 cuales el 14% corresponde al sector de los servicios
                 alimentarios (cáterin, hoteles y restaurantes)
