--- a/iniciativas.html
+++ b/iniciativas.html
@@ -76,7 +76,7 @@
                 class="col-md-6 me-3"
                 style="position: absolute; top: 10px; right: 0px"
               >
-                <div class="bg-light rounded ms-5 mt-2">
+                <div class="bg-light rounded ms-5 mt-4">
                   <div class="mb-3 bg-light rounded">
                     <p class="text-dark text-center mt-3 bold fs-5">
                       Quiero apoyar con donaciones mensuales de
@@ -89,8 +89,9 @@
                         ></label>
                         <input
                           type="text"
-                          class="rounded form-control border border-dark bg-light ms-4"
+                          class=" form-control border border-dark bg-light ms-2"
                           id="exampleFormControlInput1"
+                          style="border-radius:625rem;"
                           placeholder="$1000"
                         />
                       </div>
@@ -101,7 +102,8 @@
                         ></label>
                         <input
                           type="text"
-                          class="rounded form-control border border-dark bg-light ms-2 me-2"
+                          class="form-control border border-dark bg-light me-4 "
+                          style="border-radius:625rem;"
                           id="exampleFormControlInput1"
                           placeholder="$2000"
                         />
@@ -113,7 +115,8 @@
                         ></label>
                         <input
                           type="text"
-                          class="rounded form-control border border-dark bg-light me-4"
+                          class="form-control border border-dark bg-light me-5 ms-0"
+                          style="border-radius:625rem;"
                           id="exampleFormControlInput1"
                           placeholder="$1500"
                         />
@@ -126,7 +129,8 @@
                           ></label>
                           <input
                             type="text"
-                            class="rounded form-control border border-dark bg-light me-5"
+                            class="form-control border border-dark bg-light me-5"
+                            style="border-radius:625rem;"
                             id="exampleFormControlInput1"
                             placeholder="Otro monto, mayor a $500"
                           />
@@ -141,7 +145,8 @@
                           >
                           <input
                             type="text"
-                            class="rounded form-control border border-dark bg-light me-4"
+                            class="form-control border border-dark bg-light me-4"
+                            style="border-radius:625rem;"
                             id="exampleFormControlInput1"
                             placeholder="Seleccione una provincia"
                           />
@@ -154,7 +159,8 @@
                           >
                           <input
                             type="text"
-                            class="rounded form-control border border-dark bg-light me-4"
+                            class="form-control border border-dark bg-light me-4"
+                            style="border-radius:625rem;"
                             id="exampleFormControlInput1"
                             placeholder="Localidad"
                           />
@@ -169,16 +175,18 @@
                           >
                           <input
                             type="text"
-                            class="rounded form-control border border-dark bg-light me-4"
+                            class="form-control border border-dark bg-light me-4 mb-5"
                             id="exampleFormControlInput1"
+                            style="border-radius:625rem";
                             placeholder="$1500"
                           />
                         </div>
 
-                        <div class="col-md-6">
+                        <div class="col-md-6 mt-3">
                           <button
                             type="button"
-                            class="text-dark rounded form-control border border-dark bg-light mt-4 me-4"
+                            style="border-radius:625rem;"
+                            class="text-dark form-control border border-dark bg-light mt-4 me-4 "
                             onclick="siguientePaso()"
                           >
                             CONTINUAR
