--- a/negocio.html
+++ b/negocio.html
@@ -95,9 +95,9 @@
       <div class="col-md-6">
         <div class="form-floating mb-3 ms-4" style="color: white">
           <input
-            type="number"
+            type="text"
             class="form-control border border-success rounded-pill"
-            id="Phone number"
+            id="text"
             placeholder="Numero de teléfono"
           />
           <label for="Nameinput">Numero de teléfono</label>
