--- a/tuopinion.html
+++ b/tuopinion.html
@@ -84,7 +84,7 @@
         <div class="form-floating mb-3" style="color: white">
           <input
             type="email"
-            class="form-control border border-success rounded-pill"
+            class="form-control  text-dark bold border text-dark border-success rounded-pill"
             id="floatingInput"
             placeholder="Nombre y apellido "
           />
@@ -93,9 +93,9 @@
         <div class="form-floating mb-3" style="color: white">
           <input
             type="email"
-            class="form-control border border-success rounded-pill"
+            class="form-control text-dark bold  border border-success rounded-pill"
             id="floatingInput"
-            placeholder="Nombre y apellido "
+            placeholder="Apellido "
           />
           <label for="floatingInput">Apellido</label>
         </div>
@@ -103,19 +103,17 @@
           <div class="form-floating mb-3" style="color: white">
             <input
               type="email"
-              class="form-control border border-success rounded-pill"
-              style="color: #1a4301"
-              ;
+              class="form-control text-dark bold  border border-success rounded-pill"
               id="floatingInput"
               placeholder="Correo electrónico "
             />
             <label for="floatingInput">Dirección de correo electrónico</label>
           </div>
         </div>
-        <div class="form-floating mb-3" style="color: white">
+        <div class="form-floating mb-3">
           <textarea
-            class="form-control"
-            style="border-color: #1a4301; height: 250px"
+            class="form-control bold border border-success"
+            style=" height: 250px"
             ;
             id="InputTextArea"
             placeholder="Comentarios"
@@ -124,8 +122,8 @@
         </div>
         <button
           type="button"
-          class="col-md-12 btn btn-success fs-3 fw-bold ms-2 mt-3 mb-5"
-          style="border-color: #1a4301; background-color: #1a4301; color: white"
+          class="col-md-6 text-center btn text-dark bold border border-success rounded-pill fs-3 fw-bold ms-2 mt-3 mb-5"
+          style=" background-color:white"
         >
           ENVIAR
         </button>
