--- a/index.html
+++ b/index.html
@@ -69,18 +69,25 @@
         <div class="row">
           <div class="col-md-12" style="position: relative">
             <img class="img-fluid" src="./imagenes/fondoinicio.jpg" />
-            <div class="col-md-4" style="position: absolute; top: 10px">
-              <h1  class="text-white ms-4 mt-3 versionpequena">
+            <div class="col-md-8" style="position: absolute; top: 10px">
+              <h1
+                class="text-white ms-5 mt-5 versionpequena mt-5"
+                style="font-size: 90px"
+              >
                 Salvemos juntos la buena comida
               </h1>
-              <p class="text-white fs-3 ms-4 versionpequena">
-                El desperdicio de alimentos es un gran problema y nosotros
-                podemos ser una solución.
-              </p>
-              <p class="text-white fs-3 ms-4 versionpequena">
-                Share Before Waste es la aplicación que te permite rescatar los
-                alimentos no vendidos en tus lugares favoritos.
-              </p>
+              <div class="row">
+                <div class="col-md-8">
+                  <p class="text-white fs-2 ms-5 versionpequena mt-5">
+                    El desperdicio de alimentos es un gran problema y nosotros
+                    podemos ser una solución.
+                  </p>
+                    <p class="text-white ms-5 versionpequena mt-5 fs-2">
+                      Share Before Waste es la aplicación que te permite rescatar los alimentos no vendidos en tus lugares
+                      favoritos.
+                    </p>
+                </div>
+              </div>
             </div>
           </div>
         </div>
@@ -146,12 +153,18 @@
         <div class="row">
           <div class="col-md-12" style="position: relative">
             <img class="img-fluid mb-5" src="./imagenes/untercio.jpg" />
-            <div class="col-md-4" style="position: absolute; top: 10px">
-              <h1 class="text-white ms-4 versionpequena">
+            <div
+              class="col-md-6"
+              style="position: absolute; top: 10px; text-align: left"
+            >
+              <h1
+                class="text-white ms-5 versionpequena mt-5"
+                style="font-size: 70px"
+              >
                 Un tercio de todos los alimentos que se producen en el mundo se
                 desperdician
               </h1>
-              <p class="text-white left fs-3 ms-4 versionpequena">
+              <p class="text-white left fs-2 ms-5 versionpequena mt-4">
                 Esto representa 1300 millones de toneladas de alimentos, de los
                 cuales el 14% corresponde al sector de los servicios
                 alimentarios (cáterin, hoteles y restaurantes)
@@ -179,39 +192,40 @@
             <img
               class="img-fluid mt-4 ms-4"
               src="imagenes/usandolaapp.jpg"
+              style="height:45em;"
               alt="cliente que sostiene productos del delivery"
             />
           </div>
           <div class="col-md-6 pt-5">
-            <h1 class="ms-4" style="color: #1a4301">Involúcrate</h1>
-            <p class="text-dark fs-3 fw-bold ms-4">
+            <h1 class="ms-4 mt-4 mb-5" style="color: #1a4301">Involúcrate</h1>
+            <p class="text-dark fs-3 fw-bold ms-4 mb-5">
               ¿Tienes hambre? Con la aplicación Share Before Waste, puedes comer
               bien mientras generas un impacto.
             </p>
             <ul>
               <li
                 style="list-style-type: none"
-                class="text-dark fs-3 fw-bold ms-4"
+                class="text-dark fs-3 fw-bold ms-4 mb-5"
               >
                 RESCATA LA BUENA COMIDA DE TUS LOCALES FAVORITOS
               </li>
               <li
                 style="list-style-type: none"
-                class="text-dark fs-3 fw-bold ms-4"
+                class="text-dark fs-3 fw-bold ms-4 mb-5"
               >
                 DISFRÚTALO CON UN DESCUENTO EXTRA
               </li>
               <li
                 style="list-style-type: none"
-                class="text-dark fs-3 fw-bold ms-4"
+                class="text-dark fs-3 fw-bold ms-4 mb-5"
               >
                 AYUDA AL PLANETA
               </li>
             </ul>
             <button
               type="button"
-              class="rounded-pill fs-3 text-white fw-bold ms-4"
-              style="border-color: #1a4301; background-color: #1a4301"
+              class="rounded-pill fs-4 text-white fw-bold ms-4"
+              style="border-color: #1a4301; background-color: #1a4301;height:85px;"
               ;
             >
               DESCARGA LA APLICACIÓN
