--- a/negocio.html
+++ b/negocio.html
@@ -68,7 +68,7 @@
       <div class="container-fluid">
         <div class="row">
           <div class="col-md-12">
-            <h1 class="ms-4 mt-3" style="color: #1a4301" ;>
+            <h1 class="ms-4 mt-3" style="color: #1a4301"style="font-size: 90px" ;>
               Convierte los alimentos no vendidos en ingresos
             </h1>
             <p class="text-black fs-3 ms-4">
@@ -150,11 +150,11 @@
           <div class="col-md-12" style="position: relative">
             <img class="img-fluid" src="./imagenes/fondonegocio.jpg" />
             <div>
-              <div class="col-md-4" style="position: absolute; top: 10px">
-                <h1 class="text-white ms-4 mt-5">
+              <div class="col-md-6" style="position: absolute; top: 10px">
+                <h1 class="text-white ms-4 mt-5"style="font-size: 90px">
                   Beneficios de poner tu negocio en nuestra app
                 </h1>
-                <p class="text-white fs-3 ms-4 mt-5">
+                <p class="text-white fs-3 ms-4 mt-5 fw-bold">
                   La aplicación permite reducir el desperdicio de alimentos y
                   recuperar dinero con existencias que se habrían desperdiciado:
                   una situación beneficiosa para todos. Además, el 76% de los
@@ -171,8 +171,8 @@
       <div class="container-fluid text-start px-0">
         <div class="row">
           <div class="col-md-6 px-5 pt-3">
-            <h2>Cómo funciona</h2>
-            <p class="text-black bold fs-3 bold">
+            <h2 style="font-size: 45px" class="mb-4">Cómo funciona</h2>
+            <p class="text-black fs-3 fw-bold">
               Complete el formulario de consulta para registrar su negocio en
               Share before waste y agregue sus excedentes de comida en la
               aplicación.
