--- a/tuopinion.html
+++ b/tuopinion.html
@@ -74,7 +74,7 @@
             <p class="text-dark fs-4 ms-4 bold">
               Siempre estaremos felices de saber de vos!
             </p>
-            <p class="text-dark fs-4 ms-4 bold">
+            <p class="text-dark fs-4 ms-4 bold mb-5">
               Ya sea una simple curiosidad o una pregunta urgente!
             </p>
           </div>
