--- a/iniciativas.html
+++ b/iniciativas.html
@@ -73,12 +73,12 @@
             <div class="row">
               <div
                 id="paso1"
-                class="col-md-6 me-3"
+                class="col-md-7 me-3 mt-4 fs-3"
                 style="position: absolute; top: 10px; right: 0px"
               >
                 <div class="bg-light rounded ms-5 mt-4">
                   <div class="mb-3 bg-light rounded">
-                    <p class="text-dark text-center mt-3 bold fs-5">
+                    <p class="text-dark text-center mt-3 bold fs-2">
                       Quiero apoyar con donaciones mensuales de
                     </p>
                     <div class="row justify-content-end">
@@ -146,7 +146,7 @@
                           <input
                             type="text"
                             class="form-control border border-dark bg-light me-4"
-                            style="border-radius:625rem;"
+                            style="border-radius:25rem;"
                             id="exampleFormControlInput1"
                             placeholder="Seleccione una provincia"
                           />
