--- a/iniciativas.html
+++ b/iniciativas.html
@@ -89,9 +89,9 @@
                         ></label>
                         <input
                           type="text"
-                          class=" form-control border border-dark bg-light ms-2"
+                          class="form-control border border-dark bg-light ms-2"
                           id="exampleFormControlInput1"
-                          style="border-radius:625rem;"
+                          style="border-radius: 625rem"
                           placeholder="$1000"
                         />
                       </div>
@@ -102,8 +102,8 @@
                         ></label>
                         <input
                           type="text"
-                          class="form-control border border-dark bg-light me-4 "
-                          style="border-radius:625rem;"
+                          class="form-control border border-dark bg-light me-4"
+                          style="border-radius: 625rem"
                           id="exampleFormControlInput1"
                           placeholder="$2000"
                         />
@@ -116,7 +116,7 @@
                         <input
                           type="text"
                           class="form-control border border-dark bg-light me-5 ms-0"
-                          style="border-radius:625rem;"
+                          style="border-radius: 625rem"
                           id="exampleFormControlInput1"
                           placeholder="$1500"
                         />
@@ -130,7 +130,7 @@
                           <input
                             type="text"
                             class="form-control border border-dark bg-light me-5"
-                            style="border-radius:625rem;"
+                            style="border-radius: 625rem"
                             id="exampleFormControlInput1"
                             placeholder="Otro monto, mayor a $500"
                           />
@@ -146,7 +146,7 @@
                           <input
                             type="text"
                             class="form-control border border-dark bg-light me-4"
-                            style="border-radius:25rem;"
+                            style="border-radius: 25rem"
                             id="exampleFormControlInput1"
                             placeholder="Seleccione una provincia"
                           />
@@ -160,7 +160,7 @@
                           <input
                             type="text"
                             class="form-control border border-dark bg-light me-4"
-                            style="border-radius:625rem;"
+                            style="border-radius: 625rem"
                             id="exampleFormControlInput1"
                             placeholder="Localidad"
                           />
@@ -177,7 +177,8 @@
                             type="text"
                             class="form-control border border-dark bg-light me-4 mb-5"
                             id="exampleFormControlInput1"
-                            style="border-radius:625rem";
+                            style="border-radius: 625rem"
+                            ;
                             placeholder="$1500"
                           />
                         </div>
@@ -185,15 +186,14 @@
                         <div class="col-md-6 mt-3">
                           <button
                             type="button"
-                            style="border-radius:625rem;"
-                            class="text-dark form-control border border-dark bg-light mt-4 me-4 "
+                            style="border-radius: 625rem"
+                            class="text-dark form-control border border-dark bg-light mt-4 me-4"
                             onclick="siguientePaso()"
                           >
                             CONTINUAR
                           </button>
                         </div>
                       </div>
-                    </div>
                   </div>
                 </div>
               </div>
@@ -307,6 +307,11 @@
                     </div>
                   </div>
                 </div>
+              </div>
+              <div class="row">
+                <div class="col-md-12">
+              <div class=" text-center text-white fw-bold fs-2 mx-5">
+                <p>Tu donación cambia vidas y hace la diferencia a quienes más lo necesitan.</p>
               </div>
             </div>
           </div>
