--- a/iniciativas.html
+++ b/iniciativas.html
@@ -71,6 +71,7 @@
           <div class="col-md-12" style="position: relative">
             <img class="img-fluid w-100" src="imagenes/donaciones.jpeg" />
             <div class="row">
+              <!-- INICIO PASO 1 -->
               <div
                 id="paso1"
                 class="col-md-7 me-3 mt-4 fs-3"
@@ -197,22 +198,45 @@
                     </div>
                   </div>
                 </div>
-                <div
-                  id="paso2"
-                  class="col-md-6 me-3"
-                  style="
-                    position: absolute;
-                    top: 10px;
-                    right: 0px;
-                    display: none;
-                  "
-                >
-                  <div class="bg-light rounded ms-5 mt-2">
-                    <div class="mb-3 bg-light rounded">
-                      <p class="text-dark text-center mt-3 bold fs-5">
-                        Completa los siguientes datos
-                      </p>
-                      <div class="row justify-content-end">
+              </div>
+              <!-- FIN PASO 1 -->
+              <!-- INICIO PASO 2 -->
+              <div
+                id="paso2"
+                class="col-md-6 me-3"
+                style="position: absolute; top: 10px; right: 0px; display: none"
+              >
+                <div class="bg-light rounded ms-5 mt-2">
+                  <div class="mb-3 bg-light rounded">
+                    <p class="text-dark text-center mt-3 bold fs-5">
+                      Completa los siguientes datos
+                    </p>
+                    <div class="row justify-content-end">
+                      <div class="col-md-6">
+                        <label
+                          for="exampleFormControlInput1"
+                          class="form-label"
+                        ></label>
+                        <input
+                          type="text"
+                          class="rounded form-control border border-dark bg-light me-5"
+                          id="exampleFormControlInput1"
+                          placeholder="Nombre"
+                        />
+                      </div>
+                      <div class="col-md-6">
+                        <label
+                          for="exampleFormControlInput1"
+                          class="form-label"
+                        ></label>
+                        <input
+                          type="text"
+                          class="rounded form-control border border-dark bg-light me-4"
+                          id="exampleFormControlInput1"
+                          placeholder="Apellido"
+                        />
+                      </div>
+                      <div class="row">
                         <div class="col-md-6">
                           <label
                             for="exampleFormControlInput1"
@@ -220,9 +244,9 @@
                           ></label>
                           <input
                             type="text"
-                            class="rounded form-control border border-dark bg-light me-5"
+                            class="rounded form-control border border-dark bg-light me-4"
                             id="exampleFormControlInput1"
-                            placeholder="Nombre"
+                            placeholder="Fecha de nacimiento"
                           />
                         </div>
                         <div class="col-md-6">
@@ -234,96 +258,62 @@
                             type="text"
                             class="rounded form-control border border-dark bg-light me-4"
                             id="exampleFormControlInput1"
-                            placeholder="Apellido"
+                            placeholder="DNI"
                           />
                         </div>
-                        <div class="row">
-                          <div class="col-md-6">
-                            <label
-                              for="exampleFormControlInput1"
-                              class="form-label"
-                            ></label>
-                            <input
-                              type="text"
-                              class="rounded form-control border border-dark bg-light me-4"
-                              id="exampleFormControlInput1"
-                              placeholder="Fecha de nacimiento"
-                            />
-                          </div>
-                          <div class="col-md-6">
-                            <label
-                              for="exampleFormControlInput1"
-                              class="form-label"
-                            ></label>
-                            <input
-                              type="text"
-                              class="rounded form-control border border-dark bg-light me-4"
-                              id="exampleFormControlInput1"
-                              placeholder="DNI"
-                            />
-                          </div>
+                      </div>
+                      <div class="row">
+                        <div class="col-md-6">
+                          <label
+                            for="exampleFormControlInput1"
+                            class="form-label"
+                          ></label>
+                          <input
+                            type="text"
+                            class="rounded form-control border border-dark bg-light me-4"
+                            id="exampleFormControlInput1"
+                            placeholder="Correo electrónico"
+                          />
                         </div>
-                        <div class="row">
-                          <div class="col-md-6">
-                            <label
-                              for="exampleFormControlInput1"
-                              class="form-label"
-                            ></label>
-                            <input
-                              type="text"
-                              class="rounded form-control border border-dark bg-light me-4"
-                              id="exampleFormControlInput1"
-                              placeholder="Correo electrónico"
-                            />
-                          </div>
-                          <div class="col-md-6">
-                            <label
-                              for="exampleFormControlInput1"
-                              class="form-label"
-                            ></label>
-                            <input
-                              type="text"
-                              class="rounded form-control border border-dark bg-light me-4"
-                              id="exampleFormControlInput1"
-                              placeholder="Teléfono"
-                            />
-                          </div>
+                        <div class="col-md-6">
+                          <label
+                            for="exampleFormControlInput1"
+                            class="form-label"
+                          ></label>
+                          <input
+                            type="text"
+                            class="rounded form-control border border-dark bg-light me-4"
+                            id="exampleFormControlInput1"
+                            placeholder="Teléfono"
+                          />
                         </div>
-                        <div class="row">
-                          <div class="col-md-6">
-                            <button
-                              type="button"
-                              class="mb-2 mt-2 text-dark rounded form-control border border-dark bg-light me-4"
-                              onclick="siguientePaso()"
-                            >
-                              ANTERIOR
-                            </button>
-                          </div>
-                          <div class="col-md-6">
-                            <button
-                              type="button"
-                              class="text-dark rounded form-control border border-dark bg-light me-4 mt-2"
-                              onclick="siguientePaso()"
-                            >
-                              SIGUIENTE
-                            </button>
-                          </div>
+                      </div>
+                      <div class="row">
+                        <div class="col-md-6">
+                          <button
+                            type="button"
+                            class="mb-2 mt-2 text-dark rounded form-control border border-dark bg-light me-4"
+                            onclick="siguientePaso()"
+                          >
+                            ANTERIOR
+                          </button>
+                        </div>
+                        <div class="col-md-6">
+                          <button
+                            type="button"
+                            class="text-dark rounded form-control border border-dark bg-light me-4 mt-2"
+                            onclick="siguientePaso()"
+                          >
+                            SIGUIENTE
+                          </button>
                         </div>
                       </div>
                     </div>
                   </div>
                 </div>
-                <div class="row">
-                  <div class="col-md-12">
-                    <div class="text-center text-white fw-bold fs-2 mx-5">
-                      <p>
-                        Tu donación cambia vidas y hace la diferencia a quienes
-                        más lo necesitan.
-                      </p>
-                    </div>
-                  </div>
-                </div>
               </div>
+              <!-- FIN PASO 2 -->
+              <!-- INICIO PASO 3 -->
               <div
                 id="paso3"
                 class="col-md-6 me-3"
@@ -434,6 +424,17 @@
                         </button>
                       </div>
                     </div>
+                  </div>
+                </div>
+              </div>
+              <!-- FIN PASO 3 -->
+              <div class="row">
+                <div class="col-md-12">
+                  <div class="text-center text-white fw-bold fs-2 mx-5">
+                    <p>
+                      Tu donación cambia vidas y hace la diferencia a quienes
+                      más lo necesitan.
+                    </p>
                   </div>
                 </div>
               </div>
