--- a/index.html
+++ b/index.html
@@ -197,34 +197,34 @@
             />
           </div>
           <div class="col-md-6 pt-5">
-            <h1 class="ms-4 mt-4 mb-5" style="color: #1a4301">Involúcrate</h1>
-            <p class="text-dark fs-3 fw-bold ms-4 mb-5">
+            <h1 class="ms-4 mt-4 mb-5 " style="color: #1a4301;font-size: 3.75rem;">Involúcrate</h1>
+            <p class="text-dark fs-3 fw-bold ms-4 mb-5" style="letter-spacing: 0.06875rem;">
               ¿Tienes hambre? Con la aplicación Share Before Waste, puedes comer
               bien mientras generas un impacto.
             </p>
             <ul>
               <li
                 style="list-style-type: none"
-                class="text-dark fs-3 fw-bold ms-4 mb-5"
+                class="text-dark fw-bold ms-2 mb-5 fs-3" style="letter-spacing: 0.07813rem;"
               >
                 RESCATA LA BUENA COMIDA DE TUS LOCALES FAVORITOS
               </li>
               <li
                 style="list-style-type: none"
-                class="text-dark fs-3 fw-bold ms-4 mb-5"
+                class="text-dark fw-bold ms-2 mb-5 fs-3" style="letter-spacing: 0.07813rem;"
               >
                 DISFRÚTALO CON UN DESCUENTO EXTRA
               </li>
               <li
                 style="list-style-type: none"
-                class="text-dark fs-3 fw-bold ms-4 mb-5"
+                class="text-dark fw-bold ms-2 mb-5 fs-3" style="letter-spacing: 0.07813rem;"
               >
                 AYUDA AL PLANETA
               </li>
             </ul>
             <button
               type="button"
-              class="rounded-pill fs-4 text-white fw-bold ms-4"
+              class="rounded-pill fs-3 text-white fw-bold ms-4"
               style="border-color: #1a4301; background-color: #1a4301;height:85px;"
               ;
             >
@@ -253,7 +253,7 @@
             <img class="img-fluid" src="imagenes/LogoUADE.png" />
           </div>
           <div class="col-md-3 col-sm-9">
-            <p>2023 Todos los derechos reservados.</p>
+            <p class="derechosreservados">2023 Todos los derechos reservados.</p>
           </div>
         </div>
       </div>
