--- a/iniciativas2.html
+++ b/iniciativas2.html
@@ -78,32 +78,73 @@
               <div class="offset-md-8 col-md-4 bg-light rounded">
                 <form>
                   <div class="row">
-                    <label class="form-label text-dark bold">Quiero apoyar con donaciones mensuales de</label>
+                    <label class="form-label text-dark bold"
+                      >Quiero apoyar con donaciones mensuales de</label
+                    >
                   </div>
                   <div class="row mt-2">
                     <div class="col">
-                      <input type="radio" class="btn-check" name="btnradio" id="btnradio1" autocomplete="off" checked/>
-                      <label class="btn btn-outline-primary" for="btnradio1">$1000</label>
+                      <input
+                        type="radio"
+                        class="btn-check"
+                        name="btnradio"
+                        id="btnradio1"
+                        autocomplete="off"
+                        checked
+                      />
+                      <label class="btn btn-outline-primary" for="btnradio1"
+                        >$1000</label
+                      >
                     </div>
                     <div class="col">
-                      <input type="radio" class="btn-check" name="btnradio" id="btnradio2" autocomplete="off"/>
-                      <label class="btn btn-outline-primary" for="btnradio2">$1500</label>
+                      <input
+                        type="radio"
+                        class="btn-check"
+                        name="btnradio"
+                        id="btnradio2"
+                        autocomplete="off"
+                      />
+                      <label class="btn btn-outline-primary" for="btnradio2"
+                        >$1500</label
+                      >
                     </div>
                     <div class="col">
-                      <input type="radio" class="btn-check" name="btnradio" id="btnradio3" autocomplete="off"/>
-                      <label class="btn btn-outline-primary" for="btnradio3">$2000</label>
+                      <input
+                        type="radio"
+                        class="btn-check"
+                        name="btnradio"
+                        id="btnradio3"
+                        autocomplete="off"
+                      />
+                      <label class="btn btn-outline-primary" for="btnradio3"
+                        >$2000</label
+                      >
                     </div>
                   </div>
                   <div class="row mt-2">
                     <div class="col">
-                      <input type="radio" class="btn-check" name="btnradio" id="btnradio4" autocomplete="off"/>
-                      <label class="btn btn-outline-primary" for="btnradio4">Otro monto, mayor a $500</label>
+                      <input
+                        type="radio"
+                        class="btn-check"
+                        name="btnradio"
+                        id="btnradio4"
+                        autocomplete="off"
+                      />
+                      <label class="btn btn-outline-primary" for="btnradio4"
+                        >Otro monto, mayor a $500</label
+                      >
                     </div>
                   </div>
                   <div class="row mt-2">
                     <div class="col">
-                      <label for="provincia" class="form-label">Provincia</label>
-                      <select id="provincia" class="form-select" aria-label="Seleccionar una provincia">
+                      <label for="provincia" class="form-label"
+                        >Provincia</label
+                      >
+                      <select
+                        id="provincia"
+                        class="form-select"
+                        aria-label="Seleccionar una provincia"
+                      >
                         <option selected>Seleccione una provincia</option>
                         <option value="1">One</option>
                         <option value="2">Two</option>
@@ -111,8 +152,14 @@
                       </select>
                     </div>
                     <div class="col">
-                      <label for="localidad" class="form-label">Localidad</label>
-                      <select id="localidad" class="form-select" aria-label="Seleccionar una localidad">
+                      <label for="localidad" class="form-label"
+                        >Localidad</label
+                      >
+                      <select
+                        id="localidad"
+                        class="form-select"
+                        aria-label="Seleccionar una localidad"
+                      >
                         <option selected>Seleccione una localidad</option>
                         <option value="1">One</option>
                         <option value="2">Two</option>
@@ -123,7 +170,11 @@
                   <div class="row mt-2">
                     <div class="col">
                       <label for="comedor" class="form-label">Comedor</label>
-                      <select id="comedor" class="form-select" aria-label="Seleccionar un comedor">
+                      <select
+                        id="comedor"
+                        class="form-select"
+                        aria-label="Seleccionar un comedor"
+                      >
                         <option selected>Seleccione un comedor</option>
                         <option value="1">One</option>
                         <option value="2">Two</option>
@@ -131,7 +182,9 @@
                       </select>
                     </div>
                     <div class="col">
-                      <button type="submit" class="btn btn-primary">CONTINUAR</button>
+                      <button type="submit" class="btn btn-primary mb-5 mt-4">
+                        CONTINUAR
+                      </button>
                     </div>
                   </div>
                 </form>
