--- a/index.html
+++ b/index.html
@@ -82,10 +82,10 @@
                     El desperdicio de alimentos es un gran problema y nosotros
                     podemos ser una solución.
                   </p>
-                    <p class="text-white ms-5 versionpequena mt-5 fs-2">
-                      Share Before Waste es la aplicación que te permite rescatar los alimentos no vendidos en tus lugares
-                      favoritos.
-                    </p>
+                  <p class="text-white ms-5 versionpequena mt-5 fs-2">
+                    Share Before Waste es la aplicación que te permite rescatar
+                    los alimentos no vendidos en tus lugares favoritos.
+                  </p>
                 </div>
               </div>
             </div>
@@ -192,44 +192,60 @@
             <img
               class="img-fluid mt-4 ms-4"
               src="imagenes/usandolaapp.jpg"
-              style="height:45em;"
+              style="height: 45em"
               alt="cliente que sostiene productos del delivery"
             />
           </div>
           <div class="col-md-6 pt-5">
-            <h1 class="ms-4 mt-4 mb-5 " style="color: #1a4301;font-size: 3.75rem;">Involúcrate</h1>
-            <p class="text-dark fs-3 fw-bold ms-4 mb-5" style="letter-spacing: 0.06875rem;">
+            <h1
+              class="ms-4 mt-4 mb-5"
+              style="color: #1a4301; font-size: 3.75rem"
+            >
+              Involúcrate
+            </h1>
+            <p
+              class="text-dark fs-3 fw-bold ms-4 mb-5"
+              style="letter-spacing: 0.06875rem"
+            >
               ¿Tienes hambre? Con la aplicación Share Before Waste, puedes comer
               bien mientras generas un impacto.
             </p>
             <ul>
               <li
                 style="list-style-type: none"
-                class="text-dark fw-bold ms-2 mb-5 fs-3" style="letter-spacing: 0.07813rem;"
+                class="text-dark fw-bold ms-2 mb-5 fs-3"
+                style="letter-spacing: 0.07813rem"
               >
                 RESCATA LA BUENA COMIDA DE TUS LOCALES FAVORITOS
               </li>
               <li
                 style="list-style-type: none"
-                class="text-dark fw-bold ms-2 mb-5 fs-3" style="letter-spacing: 0.07813rem;"
+                class="text-dark fw-bold ms-2 mb-5 fs-3"
+                style="letter-spacing: 0.07813rem"
               >
                 DISFRÚTALO CON UN DESCUENTO EXTRA
               </li>
               <li
                 style="list-style-type: none"
-                class="text-dark fw-bold ms-2 mb-5 fs-3" style="letter-spacing: 0.07813rem;"
+                class="text-dark fw-bold ms-2 mb-5 fs-3"
+                style="letter-spacing: 0.07813rem"
               >
                 AYUDA AL PLANETA
               </li>
             </ul>
-            <button
+            <a
               type="button"
-              class="rounded-pill fs-3 text-white fw-bold ms-4"
-              style="border-color: #1a4301; background-color: #1a4301;height:85px;"
-              ;
-            >
-              DESCARGA LA APLICACIÓN
-            </button>
+              class="button rounded-pill fs-3 text-white fw-bold ms-4"
+              style="
+                border-color: #1a4301;
+                background-color: #1a4301;
+                height: 85px;
+                justify-content: center;
+              "
+              href="./archivos/appShareBeforeWaste.zip"
+              download
+              >DESCARGA LA APLICACIÓN
+            </a>
           </div>
         </div>
       </div>
@@ -253,7 +269,9 @@
             <img class="img-fluid" src="imagenes/LogoUADE.png" />
           </div>
           <div class="col-md-3 col-sm-9">
-            <p class="derechosreservados">2023 Todos los derechos reservados.</p>
+            <p class="derechosreservados">
+              2023 Todos los derechos reservados.
+            </p>
           </div>
         </div>
       </div>
