--- a/index.html
+++ b/index.html
@@ -237,6 +237,7 @@
               type="button"
               class="button rounded-pill fs-3 text-white fw-bold ms-4"
               style="
+                text-decoration: none;
                 border-color: #1a4301;
                 background-color: #1a4301;
                 height: 85px;
@@ -244,7 +245,7 @@
               "
               href="./archivos/appShareBeforeWaste.zip"
               download
-              >DESCARGA LA APLICACIÓN
+              ><p class="mt-3 fs3">DESCARGA LA APLICACIÓN</p>
             </a>
           </div>
         </div>
