cambios formulario javascript

--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
               "
               href="./archivos/appShareBeforeWaste.zip"
               download
-              ><p class="mt-3 fs3">DESCARGA LA APLICACIÓN</p>
+              ><p class="mt-3 fs3 me-2 ms-2"> DESCARGA LA APLICACIÓN </p>
             </a>
           </div>
         </div>
