--- a/iniciativas.html
+++ b/iniciativas.html
@@ -44,7 +44,7 @@
           id="navbarNav"
         >
           <ul class="navbar-nav">
-            <li class="nav-item">
+            <li class="nav-item ">
               <a class="nav-link fw-bold" href="index.html">INICIO</a>
             </li>
             <li class="nav-item">
@@ -67,8 +67,8 @@
     </nav>
     <main>
       <div class="container-fluid text-start px-0">
-        <div class="container-fluid" style="position: relative">
-          <img class="img-fluid w-100" src="imagenes/donaciones.jpeg" />
+        <div class="container-fluid" style="position: relative;padding: 0;">
+          <img class="img-fluid w-100 " src="imagenes/donaciones.jpeg" />
           <div
             class="container-fluid"
             style="position: absolute; top: 10px; right: 25px"
@@ -312,7 +312,11 @@
                   </div>
                   <div class="row mt-2">
                     <div class="col">
-                      <button type="submit" class=" fs-5 btn btn-primary mb-5 mt-4 text-dark"style="background-color:white;border-color:black;">
+                      <button 
+                      onclick="pasoAnterior()"
+                      type="button" 
+                      class=" fs-5 btn btn-primary mb-5 mt-4 text-dark"
+                      style="background-color:white;border-color:black;">
                         ANTERIOR
                       </button>
                     </div>
@@ -411,7 +415,11 @@
                   </div>
                   <div class="row mt-2">
                     <div class="col">
-                      <button type="submit" class="btn btn-primary mb-5 mt-5 fs-5 text-dark"style="background-color:white;border-color:black;">
+                      <button 
+                      onclick="pasoAnterior()"
+                      type="button" 
+                      class="btn btn-primary mb-5 mt-5 fs-5 text-dark"
+                      style="background-color:white;border-color:black;">
                         ANTERIOR
                       </button>
                     </div>
