--- a/negocio.html
+++ b/negocio.html
@@ -302,7 +302,9 @@
             <img class="img-fluid" src="imagenes/LogoUADE.png" />
           </div>
           <div class="col-md-3 col-sm-9">
-            <p>2023 Todos los derechos reservados.</p>
+            <p class="derechosreservados">
+              2023 Todos los derechos reservados.
+            </p>
           </div>
         </div>
       </div>
