--- a/usuario.html
+++ b/usuario.html
@@ -75,7 +75,7 @@
         <div class="row">
           <div class="col-md-12">
             <div>
-              <h1 class="ms-5 mb-5 mt-3" style="color: #1a4301";>
+              <h1 class="ms-5 mb-5 mt-3" style="color: #1a4301" ;>
                 Cada año se desperdician 2.5 mil millones de toneladas de
                 alimento
               </h1>
@@ -97,42 +97,48 @@
       <div>
         <div class="row">
           <div class="col-md-12">
-            <button
+            <a
               type="button"
-              class="rounded-pill btn btn-success fs-3 fw-bold ms-4"
+              class="button rounded-pill fs-3 text-white fw-bold ms-4"
               style="
+                text-decoration: none;
                 border-color: #1a4301;
                 background-color: #1a4301;
-                color: white;
+                height: 85px;
+                justify-content: center;
               "
-              ;;
-            >
-              DESCARGA LA APLICACIÓN
-            </button>
-            <button
+              href="./archivos/appShareBeforeWaste.zip"
+              download
+              ><p class="mt-3 fs3 me-2 ms-2">DESCARGA LA APLICACIÓN</p>
+            </a>
+            <a
               type="button"
-              class="rounded-pill btn fs-3 fw-bold ms-4"
+              class="button rounded-pill fs-3 text-white fw-bold ms-4"
               style="
+                text-decoration: none;
                 border-color: #1a4301;
                 background-color: #1a4301;
-                color: white;
+                height: 85px;
+                justify-content: center;
               "
-              ;
-            >
-              INSTRUCTIVO
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                width="22"
-                height="16"
-                viewBox="0 0 22 16"
-                fill="none"
+              href="./instructivo/InstructivoShareBeforeWaste.png" alt="_blank"
+              download
               >
-                <path
-                  d="M18.48 6.98942C18.6209 6.62161 18.7 6.21942 18.7 5.80005C18.7 3.97817 17.2219 2.50005 15.4 2.50005C14.7228 2.50005 14.0903 2.7063 13.5678 3.05692C12.6156 1.40692 10.8384 0.300049 8.8 0.300049C5.76125 0.300049 3.3 2.7613 3.3 5.80005C3.3 5.89286 3.30344 5.98567 3.30687 6.07849C1.38187 6.75567 0 8.5913 0 10.75C0 13.4829 2.21719 15.7 4.95 15.7H17.6C20.0303 15.7 22 13.7304 22 11.3C22 9.17224 20.4875 7.39505 18.48 6.98942ZM13.9116 10.0385L10.2884 13.6616C10.0753 13.8747 9.72469 13.8747 9.51156 13.6616L5.88844 10.0385C5.54125 9.6913 5.78875 9.10005 6.27688 9.10005H8.525V5.25005C8.525 4.94755 8.7725 4.70005 9.075 4.70005H10.725C11.0275 4.70005 11.275 4.94755 11.275 5.25005V9.10005H13.5231C14.0113 9.10005 14.2588 9.6913 13.9116 10.0385Z"
-                  fill="white"
-                />
-              </svg>
-            </button>
+              <p class="mt-3 fs3 me-2 ms-2">
+                INSTRUCTIVO
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="22"
+                  height="16"
+                  viewBox="0 0 22 16"
+                  fill="none"
+                ><path
+                    d="M18.48 6.98942C18.6209 6.62161 18.7 6.21942 18.7 5.80005C18.7 3.97817 17.2219 2.50005 15.4 2.50005C14.7228 2.50005 14.0903 2.7063 13.5678 3.05692C12.6156 1.40692 10.8384 0.300049 8.8 0.300049C5.76125 0.300049 3.3 2.7613 3.3 5.80005C3.3 5.89286 3.30344 5.98567 3.30687 6.07849C1.38187 6.75567 0 8.5913 0 10.75C0 13.4829 2.21719 15.7 4.95 15.7H17.6C20.0303 15.7 22 13.7304 22 11.3C22 9.17224 20.4875 7.39505 18.48 6.98942ZM13.9116 10.0385L10.2884 13.6616C10.0753 13.8747 9.72469 13.8747 9.51156 13.6616L5.88844 10.0385C5.54125 9.6913 5.78875 9.10005 6.27688 9.10005H8.525V5.25005C8.525 4.94755 8.7725 4.70005 9.075 4.70005H10.725C11.0275 4.70005 11.275 4.94755 11.275 5.25005V9.10005H13.5231C14.0113 9.10005 14.2588 9.6913 13.9116 10.0385Z"
+                    fill="white"
+                  />
+                </svg>
+              </p>
+            </a>
           </div>
         </div>
       </div>
@@ -156,7 +162,9 @@
             <img class="img-fluid" src="imagenes/LogoUADE.png" />
           </div>
           <div class="col-md-3 col-sm-9">
-            <p>2023 Todos los derechos reservados.</p>
+            <p class="derechosreservados">
+              2023 Todos los derechos reservados.
+            </p>
           </div>
         </div>
       </div>
