--- a/iniciativas.html
+++ b/iniciativas.html
@@ -422,7 +422,7 @@
                         class="form-label"
                       ></label>
                       <input
-                        type="birth"
+                        type="MM / YY"
                         class="rounded form-control border border-dark me-5 text-dark fs-5"
                         id="exampleFormControlInput1"
                         placeholder="MM/AA"
