javascript formulario iniciativas

--- a/iniciativas.html
+++ b/iniciativas.html
@@ -174,10 +174,10 @@
                         class="form-select"
                         aria-label="Seleccionar una provincia"
                       >
-                        <option selected>Seleccione una provincia</option>
-                        <option value="1">Mendoza</option>
-                        <option value="2">Buenos Aires</option>
-                        <option value="3">Cordoba</option>
+                        <option value="noSeleccionado" selected>Seleccione una provincia</option>
+                        <option value="buenosAires">Buenos Aires</option>
+                        <option value="mendoza">Mendoza</option>
+                        <option value="cordoba">Córdoba</option>
                       </select>
                     </div>
                     <div class="col">
@@ -189,10 +189,7 @@
                         class="form-select"
                         aria-label="Seleccionar una localidad"
                       >
-                        <option selected>Seleccione una localidad</option>
-                        <option value="1">Ciudad de Córdoba</option>
-                        <option value="2">two</option>
-                        <option value="3">Three</option>
+                        
                       </select>
                     </div>
                   </div>
@@ -206,10 +203,6 @@
                         class="form-select"
                         aria-label="Seleccionar un comedor"
                       >
-                        <option selected>Seleccione un comedor</option>
-                        <option value="1">uno</option>
-                        <option value="2">Two</option>
-                        <option value="3">Three</option>
                       </select>
                     </div>
                     <div class="col">
