--- a/usuario.html
+++ b/usuario.html
@@ -15,6 +15,7 @@
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
     />
+    <script src="js/newsletter.js"></script>
   </head>
   <body>
     <nav class="navbar navbar-expand-md navbar-light bg-light  py-3 py-lg-1">
@@ -98,6 +99,7 @@
         <div class="row">
           <div class="col-md-12">
             <a
+            onclick="newsletter()"
               type="button"
               class="button rounded-pill fs-3 text-white fw-bold ms-4"
               style="
